# Tensify

./: CMakeLists.txt  LICENSE  README.md
plug-ins/: Tensify.mll
scripts/: AEtensifyTemplate.mel  Tensify.py
src/: Tensify.cpp  Tensify.h  pluginMain.cpp
